--- a/Rohini/src/Blitz/blitz_ros/blitz/CMakeLists.txt
+++ b/Rohini/src/Blitz/blitz_ros/blitz/CMakeLists.txt
@@ -25,6 +25,10 @@ install(PROGRAMS
     blitz/parser.py
     blitz/blitz.py
     blitz/interfaces.py
+    blitz/convert.py
+
+    
+
 
     demo/blitz_demo.py
 
