--- a/Rohini/src/blitz_mcu/.vscode/settings.json
+++ b/Rohini/src/blitz_mcu/.vscode/settings.json
@@ -12,5 +12,8 @@
         "/home/rohini/ros2_ws/install/my_pkg/lib/python3.12/site-packages",
         "/home/rohini/ros2_ws/install/my_package/lib/python3.12/site-packages",
         "/opt/ros/jazzy/lib/python3.12/site-packages"
-    ]
+    ],
+    "files.associations": {
+        "netfwd": "cpp"
+    }
 }
